--- a/src/PasswordView/PasswordGenerator.form
+++ b/src/PasswordView/PasswordGenerator.form
@@ -46,8 +46,19 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <minimum value="50"/>
+          <maximum value="200"/>
+          <minimum value="80"/>
+          <minorTickSpacing value="0"/>
+          <paintLabels value="false"/>
+          <paintTicks value="true"/>
+          <snapToTicks value="false"/>
+          <toolTipText value=""/>
+          <valueIsAdjusting value="false"/>
         </properties>
+        <clientProperties>
+          <JSlider.isFilled class="java.lang.Boolean" value="false"/>
+          <Slider.paintThumbArrowShape class="java.lang.Boolean" value="false"/>
+        </clientProperties>
       </component>
       <component id="7e417" class="javax.swing.JLabel">
         <constraints>
